fixing hour alignment in schedule

--- a/media/style/main.css
+++ b/media/style/main.css
@@ -17,7 +17,7 @@ body {
 header {
     color: #f5f5f5;
     background: #1a1a1a url("/site_media/style/line.png") repeat-x top left;
-    margin:0;
+    margin: 0 0 0 0;
     padding:1em 0;}
     header:after { clear:both; content: "."; height:0; visibility:hidden; display:block;}
 
@@ -100,40 +100,56 @@ header img {
 
 
 /* **** TYPOGRAPHY **** */
+
+/** body typography
+ * Defines the base font-size and line height (grid)
+ */
 body { 
        font-size: 16px;
        line-height:1.25em; /* 20px */ }
 
 .content {
-    /* Uncomment to display the typographic grid */
-    /*
+    /* Uncomment to display the typographic grid
     background-image: url("tgrid.png");
     background-position: left 16px;
     /**/
 }
 
+/** RESET **/
+h1, h2, h3, h4, h5 {
+    margina:0;}
+
+/** Default margin-bottom
+ *
+ * in order to respect the typographic grid, all negative space between 
+ * element has to be a multiple of the line height.
+ * Default is 1 line spacing.
+ **/
+ul, p, .subtitle {
+    display: block;
+    margin-bottom: 1.25em;    
+}
+
 ul { margin: 1.25em 0; }
 
-h1, h2, h3, h4, h5 {margin:0;}
 
-h1 {font-family: Arial, Sans-serif;
-   }
+h1 { font-family: Arial, Sans-serif; }
 
 h2 { font-family: 'Yanone Kaffeesatz', arial, Sans-serif;
-     font-size: 2.5em;
-     line-height:1em;
+     font-size: 2.5em; /* 40px */
+     line-height:1em;  /* 40px */
 }
 
 h3 { border-bottom: thin black solid;
      font-size: 1.25em;
      line-height:1em;
-     margin-top:1em;
-     margin-bottom: -1px;
+     margin-top:-1px;
+     margin-bottom: 1em;
 }
 
+
 h4.time {
-    font-family: 'Anton', arial, Sans-serif;
-    
+    font-family: 'Anton', arial, Sans-serif;    
     color: grey;
     float: left;
     font-variant: small-caps;
@@ -142,8 +158,10 @@ h4.time {
 ul.sessions {
     margin-left: 6em;}
 
-.subtitle { font-weight:lighter; 
-	    font-family: 'Yanone Kaffeesatz', arial, Sans-serif;}
+.subtitle {
+    font-weight:lighter; 
+    font-family: 'Yanone Kaffeesatz', arial, Sans-serif;
+}
 
 .user-profile dt { color: Gray;
 		   font-weight: bold; }
